<resources>
    <string name="app_name">Caps</string>
    <string name="text">text</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="l3">L3</string>
    <string name="l4">L4</string>
    <string name="l5">L5</string>
    <string name="layout_1">Layout 1</string>
    <string name="layout_2">Layout 2</string>
    <string name="layout_4">Layout 4</string>
    <string name="layout_5">Layout 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_layout">Main Layout!</string>

</resources>