<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/button_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/L1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#19c7e6"
            android:text="@string/l1" />

        <Button
            android:id="@+id/L2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#f70531"
            android:text="@string/l2" />

        <Button
            android:id="@+id/L3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#0914e3"
            android:text="@string/l3" />

        <Button
            android:id="@+id/L4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#e37e20"
            android:text="@string/l4" />

        <Button
            android:id="@+id/L5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#0aff47"
            android:text="@string/l5" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:clipToPadding="false"
        android:clipChildren="false"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>